# sim_traffic

./: .gitignore  BB.cpp  BB.h  CMakeLists.txt  Makefile  README.md  bb.cpp  bb.h  bitmap.cpp  bitmap.h  coords_t.cpp  coords_t.h  dbitmap.cpp  dbitmap.h  entity.cpp  entity.h  load.cc  load.h  loadbmp.h  main.cc  plan.txt  platform.cpp  platform.h  prog.cpp  prog.h  rgb.cpp  rgb.h  run.sh  sim.cc  sim.h  spawn.cpp  spawn.h  station.cpp  station.h  tunnel.cpp  tunnel.h  world.cc  world.h
files/: tunnel.ppm
